Changelog
=========

2020.6.0 (unreleased)
---------------------

- Always return @id in navigation endpoint when not expanding. [njohner]
- Add portal_url to configuration endpoint and view. [njohner]
- Fix id normalization when setting up a repository. [tinagerber]
- Fix createContentInContainer to respect behaviors. [njohner]
- Add watchers solr field and indexers, currently for tasks only. [deiferni]
- Allow workspace members to trash, untrash and delete documents in workspaces. [tinagerber]
- Handle wildcard in date filters in listing endpoint. [njohner]
- Handle multiple content interfaces in @navigation endpoint. [njohner]
- Handle errors in solrsearch endpoint. [njohner]


2020.5.0 (2020-07-14)
---------------------

- Change french translation of private root. [tinagerber]
- Add @role-assignment-reports endpoint to list, add and delete role assignment reports. [tinagerber]
- Nullify text docproperties in word files when updating instead of deleting them. [deiferni]
- Overwrite logout API endpoint to also expire the user's cookies. [njohner]
- Translate activities in @notifications endpoint. [njohner]
- Fix contact workflow state variable name. [deiferni]
- Fix contact folder workflow state variable name. [deiferni]
- Expose the current logged in users'email address in the @config endpoint. [elioschmutz]
- Improve design and content of workspace invitation e-mail. [mbaechtold]
- Fix filtering on values containing spaces in listing endpoint. [njohner]
- Add question for `administrator_group` to the policy template. [mbaechtold]
- Add teaser viewlet to promote the new frontend. [tinagerber, njohner]
- Fix loading of more items in contenttree widget for toplevel items. [buchi]
- Add UserSnap API key to registry. [njohner]


2020.4.1 (2020-07-09)
---------------------

- Fix update mail filename upgrade step. [njohner]


2020.4.0 (2020-07-02)
---------------------
